Ctrl+Tab shortcut for tab switching is broken. b=374076 r=smichaud r=masayuki sr=roc